--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h3>My current favourite song is <a href="https://www.youtube.com/watch?v=AX6OrbgS8lI">Tu hai kahan</a> </h3>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
